Fix header alignments in homepage

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -221,6 +221,11 @@ p + p {
   justify-content: center;
 }
 
+.flex-align-center {
+  display: flex;
+  align-items: center;
+}
+
 .stack {
   display: flex;
   flex-direction: column;
